refactor: add field matching configuration and update related settings in UI components

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -323,6 +323,9 @@
   "field-weights": "Feldgewichtungen",
   "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100 % ergeben.",
   "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100 % ergeben.",
+  "field-matching-configuration": "Feld-Matching",
+  "field-matching-configuration-description": "Konfigurieren Sie, welche Felder für das Matching verwendet werden und deren Wichtigkeit",
+  "field-matching-configuration-subtitle": "Aktivieren Sie Felder für das Matching und passen Sie deren Wichtigkeit bei der Verifizierung von Referenzen an. Nur aktivierte Felder werden für das Matching verwendet, und deren Gewichtungen müssen zusammen 100 % ergeben.",
   "field-year": "Jahr",
   "field-yearEnd": "Jahr Ende",
   "field-yearSuffix": "Jahr-Suffix",
