--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -322,6 +322,9 @@
   "field-weights": "Field Weights",
   "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
   "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
+  "field-matching-configuration": "Field Matching",
+  "field-matching-configuration-description": "Configure which fields are used for matching and their importance",
+  "field-matching-configuration-subtitle": "Enable fields for matching and adjust their importance when verifying references. Only enabled fields are used for matching, and their weights must sum to 100%.",
   "field-year": "Year",
   "field-yearEnd": "Year End",
   "field-yearSuffix": "Year Suffix",
