feat: implement user AI settings configuration and integration across services

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -13,6 +13,20 @@
   "ai-extraction": "AI Extraction",
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
+  "ai-settings-title": "AI Configuration",
+  "ai-settings-subtitle": "Configure your OpenAI API settings - Your own API key is required for all AI features",
+  "ai-settings-use-user-key": "Use my own OpenAI API Key",
+  "ai-settings-use-user-key-hint": "Enable to use your own API key for unlimited usage. Disable to use limited demo functionality.",
+  "ai-settings-api-key-label": "OpenAI API Key (Required)",
+  "ai-settings-api-key-placeholder": "sk-...",
+  "ai-settings-api-key-hint": "Your personal OpenAI API key is required for all AI-powered features",
+  "ai-settings-api-key-help": "You can get your API key from the OpenAI platform:",
+  "ai-settings-get-api-key": "Get API Key",
+  "ai-settings-api-key-required": "API key is required to use AI features.",
+  "ai-settings-invalid-api-key-format": "Invalid API key format. Must start with 'sk-' and be at least 20 characters long.",
+  "ai-settings-model-label": "AI Model",
+  "ai-settings-model-hint": "Choose the OpenAI model for processing. GPT-4o offers best quality but higher cost.",
+  "ai-settings-cost-warning": "Using your API key will incur charges based on OpenAI's pricing. Monitor your usage on the OpenAI platform.",
   "ai-used": "DOIs extracted with AI",
   "all-found-sources": "All Found Sources",
   "all-references-verified": "All {total} references verified ✓",
