--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -13,6 +13,20 @@
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll.",
+  "ai-settings-title": "KI-Konfiguration",
+  "ai-settings-subtitle": "Konfigurieren Sie Ihre OpenAI API-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
+  "ai-settings-use-user-key": "Eigenen OpenAI API-Schlüssel verwenden",
+  "ai-settings-use-user-key-hint": "Aktivieren, um Ihren eigenen API-Schlüssel für unbegrenzte Nutzung zu verwenden. Deaktivieren für begrenzte Demo-Funktionalität.",
+  "ai-settings-api-key-label": "OpenAI API-Schlüssel (Erforderlich)",
+  "ai-settings-api-key-placeholder": "sk-...",
+  "ai-settings-api-key-hint": "Ihr persönlicher OpenAI API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
+  "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der OpenAI-Plattform erhalten:",
+  "ai-settings-get-api-key": "API-Schlüssel erhalten",
+  "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
+  "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format. Muss mit 'sk-' beginnen und mindestens 20 Zeichen lang sein.",
+  "ai-settings-model-label": "KI-Modell",
+  "ai-settings-model-hint": "Wählen Sie das OpenAI-Modell für die Verarbeitung. GPT-4o bietet beste Qualität, aber höhere Kosten.",
+  "ai-settings-cost-warning": "Die Verwendung Ihres API-Schlüssels verursacht Kosten basierend auf OpenAIs Preisgestaltung. Überwachen Sie Ihre Nutzung auf der OpenAI-Plattform.",
   "ai-used": "DOIs mit KI extrahiert",
   "all-found-sources": "Alle gefundenen Quellen",
   "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
