feat: enhance AI provider support with multiple configurations and fallback options

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -14,19 +14,35 @@
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll.",
   "ai-settings-title": "KI-Konfiguration",
-  "ai-settings-subtitle": "Konfigurieren Sie Ihre OpenAI API-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
-  "ai-settings-use-user-key": "Eigenen OpenAI API-Schlüssel verwenden",
+  "ai-settings-subtitle": "Konfigurieren Sie Ihre KI-Anbieter-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
+  "ai-settings-provider-label": "KI-Anbieter",
+  "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter. Jeder hat unterschiedliche Modelle und Preise.",
+  "ai-settings-use-user-key": "Eigenen API-Schlüssel verwenden",
   "ai-settings-use-user-key-hint": "Aktivieren, um Ihren eigenen API-Schlüssel für unbegrenzte Nutzung zu verwenden. Deaktivieren für begrenzte Demo-Funktionalität.",
-  "ai-settings-api-key-label": "OpenAI API-Schlüssel (Erforderlich)",
-  "ai-settings-api-key-placeholder": "sk-...",
-  "ai-settings-api-key-hint": "Ihr persönlicher OpenAI API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
-  "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der OpenAI-Plattform erhalten:",
+  "ai-settings-api-key-label": "API-Schlüssel (Erforderlich)",
+  "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein...",
+  "ai-settings-api-key-hint": "Ihr persönlicher API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
+  "ai-settings-api-key-help-openai": "Sie können Ihren OpenAI API-Schlüssel von der Plattform erhalten:",
+  "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
+  "ai-settings-api-key-help-google": "Sie können Ihren Google AI API-Schlüssel von AI Studio erhalten:",
+  "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
   "ai-settings-get-api-key": "API-Schlüssel erhalten",
   "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
-  "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format. Muss mit 'sk-' beginnen und mindestens 20 Zeichen lang sein.",
+  "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format für den ausgewählten Anbieter.",
   "ai-settings-model-label": "KI-Modell",
-  "ai-settings-model-hint": "Wählen Sie das OpenAI-Modell für die Verarbeitung. GPT-4o bietet beste Qualität, aber höhere Kosten.",
-  "ai-settings-cost-warning": "Die Verwendung Ihres API-Schlüssels verursacht Kosten basierend auf OpenAIs Preisgestaltung. Überwachen Sie Ihre Nutzung auf der OpenAI-Plattform.",
+  "ai-settings-model-hint": "Wählen Sie das KI-Modell für die Verarbeitung. Höherwertige Modelle bieten bessere Qualität, kosten aber mehr.",
+  "ai-settings-cost-warning": "Die Verwendung Ihres API-Schlüssels verursacht Kosten basierend auf der Preisgestaltung Ihres Anbieters. Überwachen Sie Ihre Nutzung auf deren Plattform.",
+  "ai-models": {
+    "o3": "o3 (Stärkstes Reasoning-Modell)",
+    "gpt-4o": "GPT-4o (Flagship Chat-Modell)",
+    "o3-mini": "o3 Mini (Kosteneffizientes Reasoning)",
+    "claude-4-opus": "Claude Opus 4 (Höchste Intelligenz)",
+    "claude-4-sonnet": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
+    "claude-3-5-haiku": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
+    "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
+    "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
+    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Kosteneffizienteste)"
+  },
   "ai-used": "DOIs mit KI extrahiert",
   "all-found-sources": "Alle gefundenen Quellen",
   "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
