--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -14,19 +14,35 @@
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-settings-title": "AI Configuration",
-  "ai-settings-subtitle": "Configure your OpenAI API settings - Your own API key is required for all AI features",
-  "ai-settings-use-user-key": "Use my own OpenAI API Key",
+  "ai-settings-subtitle": "Configure your AI provider settings - Your own API key is required for all AI features",
+  "ai-settings-provider-label": "AI Provider",
+  "ai-settings-provider-hint": "Choose your preferred AI provider. Each has different models and pricing.",
+  "ai-settings-use-user-key": "Use my own API Key",
   "ai-settings-use-user-key-hint": "Enable to use your own API key for unlimited usage. Disable to use limited demo functionality.",
-  "ai-settings-api-key-label": "OpenAI API Key (Required)",
-  "ai-settings-api-key-placeholder": "sk-...",
-  "ai-settings-api-key-hint": "Your personal OpenAI API key is required for all AI-powered features",
-  "ai-settings-api-key-help": "You can get your API key from the OpenAI platform:",
+  "ai-settings-api-key-label": "API Key (Required)",
+  "ai-settings-api-key-placeholder": "Enter your API key...",
+  "ai-settings-api-key-hint": "Your personal API key is required for all AI-powered features",
+  "ai-settings-api-key-help-openai": "You can get your OpenAI API key from the platform:",
+  "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
+  "ai-settings-api-key-help-google": "You can get your Google AI API key from AI Studio:",
+  "ai-settings-api-key-help": "You can get your API key from the provider's platform:",
   "ai-settings-get-api-key": "Get API Key",
   "ai-settings-api-key-required": "API key is required to use AI features.",
-  "ai-settings-invalid-api-key-format": "Invalid API key format. Must start with 'sk-' and be at least 20 characters long.",
+  "ai-settings-invalid-api-key-format": "Invalid API key format for the selected provider.",
   "ai-settings-model-label": "AI Model",
-  "ai-settings-model-hint": "Choose the OpenAI model for processing. GPT-4o offers best quality but higher cost.",
-  "ai-settings-cost-warning": "Using your API key will incur charges based on OpenAI's pricing. Monitor your usage on the OpenAI platform.",
+  "ai-settings-model-hint": "Choose the AI model for processing. Higher-tier models offer better quality but cost more.",
+  "ai-settings-cost-warning": "Using your API key will incur charges based on your provider's pricing. Monitor your usage on their platform.",
+  "ai-models": {
+    "o3": "o3 (Most Powerful Reasoning)",
+    "gpt-4o": "GPT-4o (Flagship Chat Model)",
+    "o3-mini": "o3 Mini (Cost-Efficient Reasoning)",
+    "claude-4-opus": "Claude Opus 4 (Highest Intelligence)",
+    "claude-4-sonnet": "Claude Sonnet 4 (Balance & Speed)",
+    "claude-3-5-haiku": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
+    "gemini-2-5-pro": "Gemini 2.5 Pro (Enhanced Reasoning)",
+    "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptive Thinking)",
+    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Most Cost-Efficient)"
+  },
   "ai-used": "DOIs extracted with AI",
   "all-found-sources": "All Found Sources",
   "all-references-verified": "All {total} references verified ✓",
