feat: add API key testing functionality and improve AI settings configuration

--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -13,36 +13,36 @@
   "ai-extraction": "AI Extraction",
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
-  "ai-settings-title": "AI Configuration",
-  "ai-settings-subtitle": "Configure your AI provider settings - Your own API key is required for all AI features",
-  "ai-settings-provider-label": "AI Provider",
-  "ai-settings-provider-hint": "Choose your preferred AI provider. Each has different models and pricing.",
-  "ai-settings-use-user-key": "Use my own API Key",
-  "ai-settings-use-user-key-hint": "Enable to use your own API key for unlimited usage. Disable to use limited demo functionality.",
-  "ai-settings-api-key-label": "API Key (Required)",
-  "ai-settings-api-key-placeholder": "Enter your API key...",
-  "ai-settings-api-key-hint": "Your personal API key is required for all AI-powered features",
-  "ai-settings-api-key-help-openai": "You can get your OpenAI API key from the platform:",
-  "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
-  "ai-settings-api-key-help-google": "You can get your Google AI API key from AI Studio:",
-  "ai-settings-api-key-help": "You can get your API key from the provider's platform:",
-  "ai-settings-get-api-key": "Get API Key",
-  "ai-settings-api-key-required": "API key is required to use AI features.",
-  "ai-settings-invalid-api-key-format": "Invalid API key format for the selected provider.",
-  "ai-settings-model-label": "AI Model",
-  "ai-settings-model-hint": "Choose the AI model for processing. Higher-tier models offer better quality but cost more.",
-  "ai-settings-cost-warning": "Using your API key will incur charges based on your provider's pricing. Monitor your usage on their platform.",
   "ai-models": {
-    "o3": "o3 (Most Powerful Reasoning)",
-    "gpt-4o": "GPT-4o (Flagship Chat Model)",
-    "o3-mini": "o3 Mini (Cost-Efficient Reasoning)",
+    "claude-3-5-haiku": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
     "claude-4-opus": "Claude Opus 4 (Highest Intelligence)",
     "claude-4-sonnet": "Claude Sonnet 4 (Balance & Speed)",
-    "claude-3-5-haiku": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
-    "gemini-2-5-pro": "Gemini 2.5 Pro (Enhanced Reasoning)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptive Thinking)",
-    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Most Cost-Efficient)"
+    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Most Cost-Efficient)",
+    "gemini-2-5-pro": "Gemini 2.5 Pro (Enhanced Reasoning)",
+    "gpt-4o": "GPT-4o (Flagship Chat Model)",
+    "o3": "o3 (Most Powerful Reasoning)",
+    "o3-mini": "o3 Mini (Cost-Efficient Reasoning)"
   },
+  "ai-settings-api-key-help": "You can get your API key from the provider's platform:",
+  "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
+  "ai-settings-api-key-help-google": "You can get your Google AI API key from AI Studio:",
+  "ai-settings-api-key-help-openai": "You can get your OpenAI API key from the platform:",
+  "ai-settings-api-key-hint": "Your personal API key is required for all AI-powered features",
+  "ai-settings-api-key-label": "API Key (Required)",
+  "ai-settings-api-key-placeholder": "Enter your API key...",
+  "ai-settings-api-key-required": "API key is required to use AI features.",
+  "ai-settings-cost-warning": "Using your API key will incur charges based on your provider's pricing. Monitor your usage on their platform.",
+  "ai-settings-get-api-key": "Get API Key",
+  "ai-settings-invalid-api-key-format": "Invalid API key format for the selected provider.",
+  "ai-settings-model-hint": "Choose the AI model for processing. Higher-tier models offer better quality but cost more.",
+  "ai-settings-model-label": "AI Model",
+  "ai-settings-provider-hint": "Choose your preferred AI provider. Each has different models and pricing.",
+  "ai-settings-provider-label": "AI Provider",
+  "ai-settings-subtitle": "Configure your AI provider settings - Your own API key is required for all AI features",
+  "ai-settings-title": "AI Configuration",
+  "ai-settings-use-user-key": "Use my own API Key",
+  "ai-settings-use-user-key-hint": "Enable to use your own API key for unlimited usage. Disable to use limited demo functionality.",
   "ai-used": "DOIs extracted with AI",
   "all-found-sources": "All Found Sources",
   "all-references-verified": "All {total} references verified ✓",
@@ -64,6 +64,9 @@
   "analyzing-text-content-description": "The entered text is being analyzed. We're automatically detecting bibliographic references. This may take a while depending on the length of the text.",
   "anthology": "Anthology",
   "api-key-invalid": "Invalid",
+  "api-key-test-error": "Unable to test API key - network error",
+  "api-key-test-failed": "API key test failed - please check your key",
+  "api-key-test-success": "API key is valid and working",
   "api-key-texfield-message": "Enter your API key here to use the AI extraction. If you don’t have an API key yet, you can",
   "api-key-valid": "Valid",
   "app-title": "The Source Taster",
@@ -314,6 +317,9 @@
   "field-language": "Language",
   "field-license": "License",
   "field-location": "Location",
+  "field-matching-configuration": "Field Matching",
+  "field-matching-configuration-description": "Configure which fields are used for matching and their importance",
+  "field-matching-configuration-subtitle": "Enable fields for matching and adjust their importance when verifying references. Only enabled fields are used for matching, and their weights must sum to 100%.",
   "field-medium": "Medium",
   "field-month": "Month",
   "field-noDate": "No Date",
@@ -321,8 +327,8 @@
   "field-originalLanguage": "Original Language",
   "field-originalTitle": "Original Title",
   "field-page-type": "Page Type",
-  "field-pageType": "Page Type",
   "field-pages": "Pages",
+  "field-pageType": "Page Type",
   "field-paragraphNumber": "Paragraph Number",
   "field-peerReviewed": "Peer Reviewed",
   "field-pmcid": "PMC ID",
@@ -352,9 +358,6 @@
   "field-weights": "Field Weights",
   "field-weights-description": "Adjust how much importance each field has when verifying references. All weights must sum to 100%.",
   "field-weights-explanation": "Field weights determine how important each metadata field is when comparing references. Higher weights mean that field has more influence on the overall match score. The total must equal 100%.",
-  "field-matching-configuration": "Field Matching",
-  "field-matching-configuration-description": "Configure which fields are used for matching and their importance",
-  "field-matching-configuration-subtitle": "Enable fields for matching and adjust their importance when verifying references. Only enabled fields are used for matching, and their weights must sum to 100%.",
   "field-year": "Year",
   "field-yearEnd": "Year End",
   "field-yearSuffix": "Year Suffix",
