--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -13,36 +13,36 @@
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
   "ai-model-description": "Wählen Sie das KI-Modell für die Extraktion verwendet werden soll.",
-  "ai-settings-title": "KI-Konfiguration",
-  "ai-settings-subtitle": "Konfigurieren Sie Ihre KI-Anbieter-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
-  "ai-settings-provider-label": "KI-Anbieter",
-  "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter. Jeder hat unterschiedliche Modelle und Preise.",
-  "ai-settings-use-user-key": "Eigenen API-Schlüssel verwenden",
-  "ai-settings-use-user-key-hint": "Aktivieren, um Ihren eigenen API-Schlüssel für unbegrenzte Nutzung zu verwenden. Deaktivieren für begrenzte Demo-Funktionalität.",
-  "ai-settings-api-key-label": "API-Schlüssel (Erforderlich)",
-  "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein...",
-  "ai-settings-api-key-hint": "Ihr persönlicher API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
-  "ai-settings-api-key-help-openai": "Sie können Ihren OpenAI API-Schlüssel von der Plattform erhalten:",
-  "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
-  "ai-settings-api-key-help-google": "Sie können Ihren Google AI API-Schlüssel von AI Studio erhalten:",
-  "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
-  "ai-settings-get-api-key": "API-Schlüssel erhalten",
-  "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
-  "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format für den ausgewählten Anbieter.",
-  "ai-settings-model-label": "KI-Modell",
-  "ai-settings-model-hint": "Wählen Sie das KI-Modell für die Verarbeitung. Höherwertige Modelle bieten bessere Qualität, kosten aber mehr.",
-  "ai-settings-cost-warning": "Die Verwendung Ihres API-Schlüssels verursacht Kosten basierend auf der Preisgestaltung Ihres Anbieters. Überwachen Sie Ihre Nutzung auf deren Plattform.",
   "ai-models": {
-    "o3": "o3 (Stärkstes Reasoning-Modell)",
-    "gpt-4o": "GPT-4o (Flagship Chat-Modell)",
-    "o3-mini": "o3 Mini (Kosteneffizientes Reasoning)",
+    "claude-3-5-haiku": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
     "claude-4-opus": "Claude Opus 4 (Höchste Intelligenz)",
     "claude-4-sonnet": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
-    "claude-3-5-haiku": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
-    "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
-    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Kosteneffizienteste)"
+    "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Kosteneffizienteste)",
+    "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
+    "gpt-4o": "GPT-4o (Flagship Chat-Modell)",
+    "o3": "o3 (Stärkstes Reasoning-Modell)",
+    "o3-mini": "o3 Mini (Kosteneffizientes Reasoning)"
   },
+  "ai-settings-api-key-help": "Sie können Ihren API-Schlüssel von der Anbieter-Plattform erhalten:",
+  "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
+  "ai-settings-api-key-help-google": "Sie können Ihren Google AI API-Schlüssel von AI Studio erhalten:",
+  "ai-settings-api-key-help-openai": "Sie können Ihren OpenAI API-Schlüssel von der Plattform erhalten:",
+  "ai-settings-api-key-hint": "Ihr persönlicher API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
+  "ai-settings-api-key-label": "API-Schlüssel (Erforderlich)",
+  "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein...",
+  "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
+  "ai-settings-cost-warning": "Die Nutzung Ihres API-Schlüssels verursacht Kosten basierend auf den Preisen Ihres Anbieters. Überwachen Sie Ihre Nutzung auf deren Plattform.",
+  "ai-settings-get-api-key": "API-Schlüssel erhalten",
+  "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format für den ausgewählten Anbieter.",
+  "ai-settings-model-hint": "Wählen Sie das KI-Modell für die Verarbeitung. Höherwertige Modelle bieten bessere Qualität, kosten aber mehr.",
+  "ai-settings-model-label": "KI-Modell",
+  "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter. Jeder hat unterschiedliche Modelle und Preise.",
+  "ai-settings-provider-label": "KI-Anbieter",
+  "ai-settings-subtitle": "Konfigurieren Sie Ihre KI-Anbieter-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
+  "ai-settings-title": "KI-Konfiguration",
+  "ai-settings-use-user-key": "Eigenen API-Schlüssel verwenden",
+  "ai-settings-use-user-key-hint": "Aktivieren, um Ihren eigenen API-Schlüssel für unbegrenzte Nutzung zu verwenden. Deaktivieren für begrenzte Demo-Funktionalität.",
   "ai-used": "DOIs mit KI extrahiert",
   "all-found-sources": "Alle gefundenen Quellen",
   "all-references-verified": "Alle {total} Referenzen verifiziert ✓",
@@ -64,6 +64,9 @@
   "analyzing-text-content-description": "Der eingegebene Text wird analysiert. Wir suchen und erkennen automatisch bibliografische Referenzen. Je nach Textlänge kann dies einige Zeit dauern.",
   "anthology": "Anthologie",
   "api-key-invalid": "Ungültig",
+  "api-key-test-error": "API-Schlüssel kann nicht getestet werden - Netzwerkfehler",
+  "api-key-test-failed": "API-Schlüssel-Test fehlgeschlagen - bitte überprüfen Sie Ihren Schlüssel",
+  "api-key-test-success": "API-Schlüssel ist gültig und funktioniert",
   "api-key-texfield-message": "Geben Sie hier Ihren API-Schlüssel ein, um die KI-Extraktion zu verwenden. Falls Sie noch keinen API-Schlüssel haben, können Sie diesen",
   "api-key-valid": "Gültig",
   "app-title": "The Source Taster",
@@ -315,6 +318,9 @@
   "field-language": "Sprache",
   "field-license": "Lizenz",
   "field-location": "Ort",
+  "field-matching-configuration": "Feld-Matching",
+  "field-matching-configuration-description": "Konfigurieren Sie, welche Felder für das Matching verwendet werden und deren Wichtigkeit",
+  "field-matching-configuration-subtitle": "Aktivieren Sie Felder für das Matching und passen Sie deren Wichtigkeit bei der Verifizierung von Referenzen an. Nur aktivierte Felder werden für das Matching verwendet, und deren Gewichtungen müssen zusammen 100 % ergeben.",
   "field-medium": "Medium",
   "field-month": "Monat",
   "field-noDate": "Kein Datum",
@@ -322,8 +328,8 @@
   "field-originalLanguage": "Originalsprache",
   "field-originalTitle": "Originaltitel",
   "field-page-type": "Seitentyp",
-  "field-pageType": "Seitentyp",
   "field-pages": "Seiten",
+  "field-pageType": "Seitentyp",
   "field-paragraphNumber": "Absatznummer",
   "field-peerReviewed": "Peer-Review",
   "field-pmcid": "PMC ID",
@@ -353,9 +359,6 @@
   "field-weights": "Feldgewichtungen",
   "field-weights-description": "Passen Sie an, wie wichtig jedes Feld bei der Verifizierung von Referenzen ist. Alle Gewichtungen müssen zusammen 100 % ergeben.",
   "field-weights-explanation": "Feldgewichtungen bestimmen, wie wichtig jedes Metadatenfeld beim Vergleich von Referenzen ist. Höhere Gewichtungen bedeuten, dass das Feld mehr Einfluss auf die Gesamtbewertung hat. Die Summe muss 100 % ergeben.",
-  "field-matching-configuration": "Feld-Matching",
-  "field-matching-configuration-description": "Konfigurieren Sie, welche Felder für das Matching verwendet werden und deren Wichtigkeit",
-  "field-matching-configuration-subtitle": "Aktivieren Sie Felder für das Matching und passen Sie deren Wichtigkeit bei der Verifizierung von Referenzen an. Nur aktivierte Felder werden für das Matching verwendet, und deren Gewichtungen müssen zusammen 100 % ergeben.",
   "field-year": "Jahr",
   "field-yearEnd": "Jahr Ende",
   "field-yearSuffix": "Jahr-Suffix",
