--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -14,9 +14,9 @@
   "ai-model": "AI Model",
   "ai-model-description": "Select the AI model to be used for the extraction.",
   "ai-models": {
-    "claude-3-5-haiku": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
-    "claude-4-opus": "Claude Opus 4 (Highest Intelligence)",
-    "claude-4-sonnet": "Claude Sonnet 4 (Balance & Speed)",
+    "claude-3-5-haiku-20241022": "Claude 3.5 Haiku (Fast & Cost-Efficient)",
+    "claude-opus-4-20250514": "Claude Opus 4 (Highest Intelligence)",
+    "claude-sonnet-4-20250514": "Claude Sonnet 4 (Balance & Speed)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptive Thinking)",
     "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Most Cost-Efficient)",
     "gemini-2-5-pro": "Gemini 2.5 Pro (Enhanced Reasoning)",
