--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -17,6 +17,8 @@
     "claude-3-5-haiku-20241022": "Claude 3.5 Haiku (Schnell & Kosteneffizient)",
     "claude-opus-4-20250514": "Claude Opus 4 (Höchste Intelligenz)",
     "claude-sonnet-4-20250514": "Claude Sonnet 4 (Balance & Geschwindigkeit)",
+    "deepseek-chat": "DeepSeek Chat (Allgemeine Anwendung)",
+    "deepseek-reasoner": "DeepSeek Reasoner (Erweiterte Problemlösung)",
     "gemini-2-5-flash": "Gemini 2.5 Flash (Adaptives Denken)",
     "gemini-2-5-flash-lite": "Gemini 2.5 Flash-Lite (Kosteneffizienteste)",
     "gemini-2-5-pro": "Gemini 2.5 Pro (Erweiterte Argumentation)",
