feat: add AI settings page and integrate API key management refactor: update localization files for AI configuration and settings fix: enhance navigation bar with AI settings link

--- a/apps/extension/src/locales/de.json
+++ b/apps/extension/src/locales/de.json
@@ -9,6 +9,7 @@
   "advanced-interpretation-description": "Intelligente Inhaltsergänzung und Quellerkennung",
   "advisor": "Betreuer",
   "ai": "KI",
+  "ai-configuration": "AI Konfiguration",
   "ai-description": "Aktiviere und konfiguriere KI-gestützte Funktionen",
   "ai-extraction": "KI-Extraktion",
   "ai-model": "KI-Modell",
@@ -30,18 +31,18 @@
   "ai-settings-api-key-help-anthropic": "Sie können Ihren Anthropic API-Schlüssel von der Konsole erhalten:",
   "ai-settings-api-key-help-google": "Sie können Ihren Google AI API-Schlüssel von AI Studio erhalten:",
   "ai-settings-api-key-help-openai": "Sie können Ihren OpenAI API-Schlüssel von der Plattform erhalten:",
-  "ai-settings-api-key-hint": "Ihr persönlicher API-Schlüssel ist für alle KI-gestützten Funktionen erforderlich",
-  "ai-settings-api-key-label": "API-Schlüssel (Erforderlich)",
-  "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein...",
+  "ai-settings-api-key-hint": "Geben Sie Ihren API-Schlüssel ein und testen Sie ihn für den ausgewählten Anbieter",
+  "ai-settings-api-key-label": "API-Schlüssel",
+  "ai-settings-api-key-placeholder": "Geben Sie Ihren API-Schlüssel ein",
   "ai-settings-api-key-required": "API-Schlüssel ist für die Nutzung der KI-Funktionen erforderlich.",
   "ai-settings-cost-warning": "Die Nutzung Ihres API-Schlüssels verursacht Kosten basierend auf den Preisen Ihres Anbieters. Überwachen Sie Ihre Nutzung auf deren Plattform.",
   "ai-settings-get-api-key": "API-Schlüssel erhalten",
   "ai-settings-invalid-api-key-format": "Ungültiges API-Schlüssel-Format für den ausgewählten Anbieter.",
   "ai-settings-model-hint": "Wählen Sie das KI-Modell für die Verarbeitung. Höherwertige Modelle bieten bessere Qualität, kosten aber mehr.",
-  "ai-settings-model-label": "KI-Modell",
-  "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter. Jeder hat unterschiedliche Modelle und Preise.",
+  "ai-settings-model-label": "Modell",
+  "ai-settings-provider-hint": "Wählen Sie Ihren bevorzugten KI-Anbieter",
   "ai-settings-provider-label": "KI-Anbieter",
-  "ai-settings-subtitle": "Konfigurieren Sie Ihre KI-Anbieter-Einstellungen - Ihr eigener API-Schlüssel ist für alle KI-Funktionen erforderlich",
+  "ai-settings-subtitle": "Konfigurieren Sie Ihren KI-Anbieter und Modelle",
   "ai-settings-title": "KI-Konfiguration",
   "ai-settings-use-user-key": "Eigenen API-Schlüssel verwenden",
   "ai-settings-use-user-key-hint": "Aktivieren, um Ihren eigenen API-Schlüssel für unbegrenzte Nutzung zu verwenden. Deaktivieren für begrenzte Demo-Funktionalität.",
@@ -310,12 +311,12 @@
   "field-format": "Format",
   "field-inPress": "Im Druck",
   "field-institution": "Institution",
+  "field-isStandAlone": "Eigenständiges Werk",
   "field-isbn": "ISBN",
   "field-issn": "ISSN",
-  "field-isStandAlone": "Eigenständiges Werk",
   "field-issue": "Ausgabe",
-  "field-issued": "Publikationsdatum",
   "field-issuePrefix": "Ausgabe-Präfix",
+  "field-issued": "Publikationsdatum",
   "field-keywords": "Schlüsselwörter",
   "field-language": "Sprache",
   "field-license": "Lizenz",
@@ -330,8 +331,8 @@
   "field-originalLanguage": "Originalsprache",
   "field-originalTitle": "Originaltitel",
   "field-page-type": "Seitentyp",
-  "field-pages": "Seiten",
   "field-pageType": "Seitentyp",
+  "field-pages": "Seiten",
   "field-paragraphNumber": "Absatznummer",
   "field-peerReviewed": "Peer-Review",
   "field-pmcid": "PMC ID",
@@ -574,6 +575,7 @@
   "pmid": "PMID",
   "popup": "Popup",
   "practical-example": "Praktisches Beispiel",
+  "provider": "Anbieter",
   "publication-date": "Publikationsdatum",
   "publication-details": "Publikations-Details",
   "publication-place": "Publikationsort",
@@ -687,6 +689,9 @@
   "setting-remove-artifact": "Artefakte entfernen",
   "setting-remove-artifact-description": "Entfernen von Artefaktzeichen",
   "setting-remove-artifact-example": "[1] → \"\"",
+  "setting-remove-artifacts": "",
+  "setting-remove-artifacts-description": "",
+  "setting-remove-artifacts-example": "",
   "setting-remove-duplicate-authors": "Doppelte Autoren entfernen",
   "setting-remove-duplicate-authors-description": "Doppelte Einträge eliminieren",
   "setting-remove-duplicate-authors-example": "Wiederholte Autorennamen entfernen",
@@ -761,13 +766,13 @@
   "tooltip-format": "Dateiformat oder Medientyp der Publikation (z.B. 'PDF', 'HTML', 'print')",
   "tooltip-inPress": "Publikation ist angenommen, aber noch nicht veröffentlicht (z.B. 'true')",
   "tooltip-institution": "Akademische Institution, die mit dem Werk verbunden ist (z.B. 'Harvard University', 'Max Planck Institute')",
+  "tooltip-isStandAlone": "Ob es sich um ein eigenständiges Werk handelt oder Teil einer Serie (z.B. 'true' für Monographie)",
   "tooltip-isbn": "Internationale Standardbuchnummer für Bücher (z.B. '978-3-16-148410-0')",
   "tooltip-issn": "Internationale Standardnummer für Periodika (z.B. '1234-5678')",
-  "tooltip-isStandAlone": "Ob es sich um ein eigenständiges Werk handelt oder Teil einer Serie (z.B. 'true' für Monographie)",
   "tooltip-issue": "Ausgabennummer innerhalb eines Bands (z.B. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Präfix für die Ausgabennummerierung (z.B. 'No.')",
-  "tooltip-issued": "Datum, an dem die Publikation offiziell veröffentlicht wurde (z.B. '2024-05-15')",
   "tooltip-issuePrefix": "Präfix für Ausgabe (z.B. 'No.')",
+  "tooltip-issued": "Datum, an dem die Publikation offiziell veröffentlicht wurde (z.B. '2024-05-15')",
   "tooltip-keywords": "Schlüsselwörter oder Tags, die mit der Publikation verbunden sind (z.B. 'machine learning, AI, neural networks')",
   "tooltip-language": "Sprache, in der die Publikation verfasst ist (z.B. 'en', 'de', 'fr')",
   "tooltip-license": "Lizenz, unter der das Werk veröffentlicht ist (z.B. 'CC BY 4.0', 'MIT')",
@@ -781,8 +786,8 @@
   "tooltip-originalLanguage": "Originalsprache des Werks (für Übersetzungen)",
   "tooltip-originalTitle": "Originaltitel (für übersetzte Werke) - wichtig für deutsche Zitationsstile",
   "tooltip-page-type": "Art der Seitennummerierung (z.B. 'arabic', 'roman', 'letter')",
-  "tooltip-pages": "Seitenzahlen, auf denen der Artikel erscheint (z.B. '123-145', 'pp. 67-89')",
   "tooltip-pageType": "Art der Seitenverweis (z.B. 'pp.' oder 'p.')",
+  "tooltip-pages": "Seitenzahlen, auf denen der Artikel erscheint (z.B. '123-145', 'pp. 67-89')",
   "tooltip-paragraph-number": "Spezifische Absatznummer-Referenz (z.B. '¶ 15', 'para. 3')",
   "tooltip-paragraphNumber": "Absatznummer für Quellen ohne Seitenzahlen",
   "tooltip-peerReviewed": "Ob das Werk ein Peer-Review durchlaufen hat (z.B. 'true', 'false')",
