--- a/apps/extension/src/locales/en.json
+++ b/apps/extension/src/locales/en.json
@@ -9,6 +9,7 @@
   "advanced-interpretation-description": "Intelligent content completion and source recognition",
   "advisor": "Advisor",
   "ai": "AI",
+  "ai-configuration": "AI Configuration",
   "ai-description": "Enable and configure AI-powered functionality",
   "ai-extraction": "AI Extraction",
   "ai-model": "AI Model",
@@ -30,18 +31,18 @@
   "ai-settings-api-key-help-anthropic": "You can get your Anthropic API key from the console:",
   "ai-settings-api-key-help-google": "You can get your Google AI API key from AI Studio:",
   "ai-settings-api-key-help-openai": "You can get your OpenAI API key from the platform:",
-  "ai-settings-api-key-hint": "Your personal API key is required for all AI-powered features",
-  "ai-settings-api-key-label": "API Key (Required)",
-  "ai-settings-api-key-placeholder": "Enter your API key...",
+  "ai-settings-api-key-hint": "Enter and test your API key for the selected provider",
+  "ai-settings-api-key-label": "API Key",
+  "ai-settings-api-key-placeholder": "Enter your API key",
   "ai-settings-api-key-required": "API key is required to use AI features.",
   "ai-settings-cost-warning": "Using your API key will incur charges based on your provider's pricing. Monitor your usage on their platform.",
   "ai-settings-get-api-key": "Get API Key",
   "ai-settings-invalid-api-key-format": "Invalid API key format for the selected provider.",
   "ai-settings-model-hint": "Choose the AI model for processing. Higher-tier models offer better quality but cost more.",
-  "ai-settings-model-label": "AI Model",
-  "ai-settings-provider-hint": "Choose your preferred AI provider. Each has different models and pricing.",
+  "ai-settings-model-label": "Model",
+  "ai-settings-provider-hint": "Choose your preferred AI provider",
   "ai-settings-provider-label": "AI Provider",
-  "ai-settings-subtitle": "Configure your AI provider settings - Your own API key is required for all AI features",
+  "ai-settings-subtitle": "Configure your AI provider and models",
   "ai-settings-title": "AI Configuration",
   "ai-settings-use-user-key": "Use my own API Key",
   "ai-settings-use-user-key-hint": "Enable to use your own API key for unlimited usage. Disable to use limited demo functionality.",
@@ -129,6 +130,7 @@
   "date-range": "Date Range",
   "day": "Day",
   "degree": "Degree",
+  "delete": "",
   "department": "Department",
   "description": "Description",
   "description-match": "Description Match",
@@ -309,12 +311,12 @@
   "field-format": "Format",
   "field-inPress": "In Press",
   "field-institution": "Institution",
+  "field-isStandAlone": "Is Standalone",
   "field-isbn": "ISBN",
   "field-issn": "ISSN",
-  "field-isStandAlone": "Is Standalone",
   "field-issue": "Issue",
-  "field-issued": "Publication Date",
   "field-issuePrefix": "Issue Prefix",
+  "field-issued": "Publication Date",
   "field-keywords": "Keywords",
   "field-language": "Language",
   "field-license": "License",
@@ -329,8 +331,8 @@
   "field-originalLanguage": "Original Language",
   "field-originalTitle": "Original Title",
   "field-page-type": "Page Type",
-  "field-pages": "Pages",
   "field-pageType": "Page Type",
+  "field-pages": "Pages",
   "field-paragraphNumber": "Paragraph Number",
   "field-peerReviewed": "Peer Reviewed",
   "field-pmcid": "PMC ID",
@@ -573,6 +575,7 @@
   "pmid": "PMID",
   "popup": "Popup",
   "practical-example": "Practical Example",
+  "provider": "Provider",
   "publication-date": "Publication Date",
   "publication-details": "Publication Details",
   "publication-place": "Publication Place",
@@ -683,6 +686,9 @@
   "setting-recognize-source-types": "Recognize Source Types",
   "setting-recognize-source-types-description": "Automatically detect publication types",
   "setting-recognize-source-types-example": "Detect \"journal-article\" vs \"book\"",
+  "setting-remove-artifact": "",
+  "setting-remove-artifact-description": "",
+  "setting-remove-artifact-example": "",
   "setting-remove-artifacts": "Remove Artifacts",
   "setting-remove-artifacts-description": "Remove artifact characters",
   "setting-remove-artifacts-example": "[1] → \"\"",
@@ -760,13 +766,13 @@
   "tooltip-format": "File format or media type of the publication (e.g. 'PDF', 'HTML', 'print')",
   "tooltip-inPress": "Publication is accepted but not yet published (e.g. 'true')",
   "tooltip-institution": "Academic institution associated with the work (e.g. 'Harvard University', 'Max Planck Institute')",
+  "tooltip-isStandAlone": "Whether this is a standalone work (e.g. 'true' for monographs)",
   "tooltip-isbn": "International Standard Book Number for books (e.g. '978-3-16-148410-0')",
   "tooltip-issn": "International Standard Serial Number for periodicals (e.g. '1234-5678')",
-  "tooltip-isStandAlone": "Whether this is a standalone work (e.g. 'true' for monographs)",
   "tooltip-issue": "Issue number within a volume (e.g. '3', 'Special Issue')",
   "tooltip-issue-prefix": "Prefix for issue numbering (e.g. 'No.')",
-  "tooltip-issued": "Date when the publication was officially released (e.g. '2024-05-15')",
   "tooltip-issuePrefix": "Prefix for issue (e.g., 'No.')",
+  "tooltip-issued": "Date when the publication was officially released (e.g. '2024-05-15')",
   "tooltip-keywords": "Keywords or tags associated with the publication (e.g. 'machine learning, AI, neural networks')",
   "tooltip-language": "Language in which the publication is written (e.g. 'en', 'de', 'fr')",
   "tooltip-license": "License under which the work is published (e.g. 'CC BY 4.0', 'MIT')",
@@ -780,8 +786,8 @@
   "tooltip-originalLanguage": "Original language of the work (for translations)",
   "tooltip-originalTitle": "Original title (for translated works) - important for German citation styles",
   "tooltip-page-type": "Type of page numbering (e.g. 'arabic', 'roman', 'letter')",
-  "tooltip-pages": "Page numbers where the article appears (e.g. '123-145', 'pp. 67-89')",
   "tooltip-pageType": "Type of page reference (e.g., 'p.' or 'pp.')",
+  "tooltip-pages": "Page numbers where the article appears (e.g. '123-145', 'pp. 67-89')",
   "tooltip-paragraph-number": "Specific paragraph number reference (e.g. '¶ 15', 'para. 3')",
   "tooltip-paragraphNumber": "Paragraph number for sources without page numbers",
   "tooltip-peerReviewed": "Whether the work underwent peer review (e.g. 'true', 'false')",
